# herald

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  base_dataset.py  data.dvc  infer.py  models.dvc  pyproject.toml  train.py
.dvc/: config
.github/workflows/: test.yml
herald/: base_dataset.py  train.py
herald/config/: config.yaml
