[tool.poetry]
name = "herald"
version = "0.1.0"
description = ""
authors = ["Pavel <hydrophonyx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
plotly = "5.18.0"
attrs = "^23.2.0"
dvc = {extras = ["gdrive"], version = "^3.37.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
